# ExampleShared

./: .gitignore  README.md  build.py  pyproject.toml
protocol/: example.proto
