[tool.poetry]
name = "protocol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# Exclude the protocol definition
exclude = ["protocol/example.proto"]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.56.2"
grpcio-tools = "^1.56.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true